# archon-ai

./: .env.example  .gitignore  GITHUB_SETUP.md  PUSH_TO_GITHUB.md  README.md  cli_agent.py  nixpacks.toml  pyproject.toml  railway.toml  render.yaml  requirements.txt  run.py  test_agent_api.py  test_agent_tools.py  test_user_trajectories.py
app/: README.md
app/agents/: AGENT_GRAPH.md  README.md  agent_graph.mmd  astrology_agent.py  graph_agent.py  prompts.py  tools.py
app/api/: main.py
app/api/routes/: auth.py  oauth.py  user.py  websocket.py
app/core/: config.py  logging_config.py  security.py
app/models/: base.py  chart.py  conversation.py  user.py
app/services/astrology/: kerykeion_service.py
app/services/cost_tracker/: __init__.py  tracker.py
app/services/embeddings/: __init__.py  openai_embeddings.py
app/services/geocoding/: __init__.py  geocoding_service.py
app/services/llm/: groq_provider.py  llm_provider.py
app/services/memory/: __init__.py  chroma_service.py  langmem_processor.py  memory_service.py  models.py  rag_engine.py
app/services/persistence/: database.py
docs/: SCALING_STRATEGY.md
frontend/: .env.example  package-lock.json  package.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/hooks/: usePlanetaryData.ts  useWebSocket.ts
frontend/src/stores/: useAstrologyStore.ts  useAuthStore.ts  useChatStore.ts  useSphereStore.ts
frontend/src/types/: astrology.ts  index.ts  sphere.ts
tests/e2e/: README.md  package-lock.json  package.json
tests/e2e/playwright/: conversation.spec.ts
tests/e2e/puppeteer/: conversation.test.js
(+37 files in other folders)
