[project]
name = "archon-ai"
version = "0.1.0"
description = "Personal AI Astrologer - Subscription-based astrology chat application"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "Nicholas Park"}
]

dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "websockets>=12.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "python-dotenv>=1.0.0",
    "langchain>=0.1.0",
    "langchain-core>=0.1.0",
    "langgraph>=0.0.40",
    "langchain-groq>=0.0.1",
    "langchain-community>=0.0.20",
    "langchain-openai>=0.0.5",
    "groq>=0.4.0",
    "together>=0.2.0",
    "openai>=1.10.0",
    "chromadb>=0.4.22",
    "kerykeion>=4.0.0",
    "httpx>=0.26.0",
    "aiohttp>=3.9.0",
    "geopy>=2.4.0",
    "SQLAlchemy>=2.0.0",
    "aiosqlite>=0.19.0",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "bcrypt>=4.0.0,<5.0.0",
    "email-validator>=2.0.0",
    "python-multipart>=0.0.6",
    "tenacity>=8.2.0",
    "tiktoken>=0.5.0",
    "python-dateutil>=2.8.0",
    "pytz>=2024.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
    "black>=24.0.0",
    "ruff>=0.1.0",
    "httpx-ws>=0.5.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.black]
line-length = 100
target-version = ['py39']

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
